# softrender-rs

./: .gitignore  .travis.yml  Cargo.toml  LICENSE.md  README.md
src/: demo_rasterizer.rs  demo_raytracer.rs  lib.rs
src/canvas/: bmp.rs  canvas.rs  color.rs  image.rs  img.rs  mod.rs  ppm.rs  raw.rs
src/image/: canvas.rs  channel.rs  color.rs  image.rs  mod.rs
src/math/: mat2f.rs  mat3f.rs  mat4f.rs  mod.rs  vec2f.rs  vec2u.rs  vec3f.rs  vec4f.rs
src/model/: material.rs  mesh.rs  mod.rs  shapes.rs  sphere.rs  triangle.rs
src/rasterizer/: image_rgbu8.rs  mod.rs
src/raytracer/: image_rgbu8.rs  mod.rs  oldraytracer.rs
src/shader/: camera.rs  fragment.rs  mod.rs  pipeline.rs  vertex.rs
